<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.GithubUserAPI.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/iv_desc_avatar"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name_receiver"
                    style="@style/Size.Profile.Bold"
                    android:text="@string/card_item_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username_receiver"
                    style="@style/Size.Profile.Small"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/tv_company_receiver"
                    style="@style/Size.Profile.Small"
                    android:text="@string/Company"
                    android:textColor="@color/teal_250" />

                <TextView
                    android:id="@+id/tv_location_receiver"
                    style="@style/Size.Profile.Small"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Location"
                    android:textColor="@color/teal_250" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="@color/purple_500"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_followers"
                        android:elevation="7dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/Size.RowReposFoll"
                                android:text="@string/repository" />

                            <TextView
                                android:id="@+id/tv_repositories"
                                style="@style/Size.DataNumber"
                                android:text="@string/number" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/Size.RowReposFoll"
                                android:text="@string/followers" />

                            <TextView
                                android:id="@+id/tv_followers"
                                style="@style/Size.DataNumber"
                                android:text="@string/number" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/Size.RowReposFoll"
                                android:text="@string/following" />

                            <TextView
                                android:id="@+id/tv_following"
                                style="@style/Size.DataNumber"
                                android:text="@string/number" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="Hi" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@android:color/black"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>